--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,5 +1,13 @@
-<ap-photo
-  *ngFor="let photo of photos"
-  [url]="photo.url"
-  [description]="photo.description"
-></ap-photo>
+<div class="text-center mt-3 mb-3">
+  <form>
+      <input
+          class="rounded"
+          type="search"
+          placeholder="search..."
+          autofocus
+          (keyup)="apllyFilter($event)"
+          >
+  </form>
+</div>
+{{ filter }}
+<ap-photos [photos]="photos"></ap-photos>
