implements component filter in photos

--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -5,9 +5,8 @@
           type="search"
           placeholder="search..."
           autofocus
-          (keyup)="apllyFilter($event)"
+          (keyup)="filter($event)"
           >
   </form>
 </div>
-{{ filter }}
-<ap-photos [photos]="photos"></ap-photos>
+<ap-photos [photos]="photos | filterByDescription: text"></ap-photos>
