--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -11,4 +11,7 @@
 </div>
 <ap-photos [photos]="photos | filterByDescription: filter"></ap-photos>
 
-<ap-load-button [hasMore]="hasMore"></ap-load-button>
+<ap-load-button
+  (click)="load()"
+  [hasMore]="hasMore">
+</ap-load-button>
