--- a/src/app/photos/photo-list/photos/photos.component.html
+++ b/src/app/photos/photo-list/photos/photos.component.html
@@ -6,8 +6,8 @@
       <div *ngFor="let photo of cols" class="col-4">
           <ap-photo
               [url]="photo.url"
-              [description]="photo.description">
-          </ap-photo>
+              [description]="photo.description"
+          ></ap-photo>
       </div>
   </li>
 </ol>
