--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,5 +1,8 @@
 <ap-search></ap-search>
-<ap-photos [photos]="photos | filterByDescription: filter"></ap-photos>
+
+<ap-photos
+  [photos]="photos | filterByDescription: filter">
+</ap-photos>
 
 <ap-load-button
   (click)="load()"
