update search photo

--- a/src/app/photos/photo-list/search/search.component.html
+++ b/src/app/photos/photo-list/search/search.component.html
@@ -8,5 +8,6 @@
           placeholder="search..."
           autofocus
           (keyup)="doSearch(search.value)"
+          [value]="value"
           ></form>
 </div>
