--- a/src/app/home/signin/signin.component.html
+++ b/src/app/home/signin/signin.component.html
@@ -2,26 +2,35 @@
 
 <form [formGroup]="loginForm" class="form mt-4">
 
-    <div class="form-group">
-        <input
-            formControlName="userName"
-            class="form-control"
-            placeholder="user name"
-            autofocus>
-    </div>
+  <div class="form-group">
+    <input
+      formControlName="userName"
+      class="form-control"
+      placeholder="User name"
+      autofocus>
+    <ap-vmessage
+      *ngIf="loginForm.get('userName')?.errors"
+      text="User name is required!"
+    ></ap-vmessage>
+  </div>
 
-    <div class="form-group">
-        <input
-            formControlName="password"
-            type="password"
-            class="form-control"
-            placeholder="password">
-    </div>
+  <div class="form-group">
+    <input
+      formControlName="password"
+      type="password"
+      class="form-control"
+      placeholder="Password">
+    <ap-vmessage
+      *ngIf="loginForm.get('password')?.errors"
+      text="Password is required!"
+    ></ap-vmessage>
+  </div>
 
     <button
+        [disabled]="!loginForm.valid"
         type="submit"
         class="btn btn-primary btn-block">
-        login
+        Login
     </button>
 
 </form>
