implement user service

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,9 +1,9 @@
 <header class="fixed-top">
   <nav class="navbar navbar-light bg-white">
-      <a class="navbar-brand">ALURAPIC</a>
+      <a class="navbar-brand px-2">ALURAPIC</a>
       <div>
-          <i class="fa fa-user-circle"></i>
-          <a>Username</a>
+          <i class="fa fa-user-circle px-2 mr-1"></i>
+          <a class="px-2">{{ user?.name }}</a>
       </div>
   </nav>
 </header>
