--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,9 +1,13 @@
 <header class="fixed-top">
   <nav class="navbar navbar-light bg-white">
-      <a class="navbar-brand px-2">ALURAPIC</a>
-      <div>
-          <i class="fa fa-user-circle px-2 mr-1"></i>
-          <a class="px-2">{{ user?.name }}</a>
-      </div>
+    <a class="navbar-brand px-2">ALURAPIC</a>
+    <div *ngIf="(user$ | async) as user; else login">
+      <i class="fa fa-user-circle px-2 mr-1"></i>
+      <a class="px-2">{{ user.name }}</a>
+      <a (click)="logout()" class="px-2">(Logout)</a>
+    </div>
+    <ng-template #login>
+      <span class="navbar-text px-2"> Please, login! </span>
+    </ng-template>
   </nav>
 </header>
