--- a/src/app/photos/photo-form/photo-form.component.html
+++ b/src/app/photos/photo-form/photo-form.component.html
@@ -1,3 +1,55 @@
-<p>
-  photo-form works!
-</p>
+<div class="container">
+  <form [formGroup]="photoForm" (submit)="upload()" class="row">
+    <div class="col-md-6 text-center">
+
+      <div class="form-group" *ngIf="!preview; else previewImage">
+        <button immediateClick type="button" (click)="fileInput.click()" class="btn btn-primary">
+          <i class="fa fa-image fa-4x align-middle"></i>
+        </button>
+        <input
+          #fileInput
+          hidden
+          formControlName="file"
+          type="file"
+          accept="image/*"
+          (change)="handleFile($any($event).target.files[0])"          >
+        <ap-vmessage
+          *ngIf="photoForm.get('file')?.errors"
+          text="Please, selec a photo!"
+        ></ap-vmessage>
+      </div>
+      <ng-template #previewImage>
+        <div class="text-center">
+          <ap-photo [url]="preview" title="Preview">
+          </ap-photo>
+       </div>
+      </ng-template>
+    </div>
+
+    <div class="col-md-6">
+      <div class="form-group">
+        <textarea
+        formControlName="description"
+          class="form-control form-control-sm"
+          placeholder="photo description"></textarea>
+        <ap-vmessage
+          *ngIf="photoForm.get('description')?.errors"
+          text="Max length is 300!"
+        ></ap-vmessage>
+      </div>
+
+      <div class="form-group">
+        <label class="text-muted">
+          Allow comments
+          <input formControlName="allowComments" type="checkbox">
+        </label>
+      </div>
+
+      <button [disabled]="photoForm.invalid" type="submit" class="btn btn-primary btn-block">
+        Upload
+      </button>
+
+      <a class="btn btn-secondary btn-block">Cancel</a>
+    </div>
+  </form>
+</div>
