--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -9,5 +9,8 @@
     <ng-template #login>
       <a [routerLink]="['']" class="navbar-text px-2"> Please, login! </a>
     </ng-template>
+    <div class="fixed-top">
+      <ap-alert></ap-alert>
+    </div>
   </nav>
 </header>
