--- a/src/app/photos/photo-details/photo-details.component.html
+++ b/src/app/photos/photo-details/photo-details.component.html
@@ -7,12 +7,9 @@
       <small>
         <p class="text-left break-word">{{photo.description}}</p>
         <div class="text-left mb-4">
-          <i class="fa fa-comment-o fa-2x mr-2 ml-2"></i>{{ photo.comments }}
-          <i photoOwnerOnly
-            [ownerPhoto]="photo"
-            (click)="remove()"
-            class="fa fa-trash-o fa-2x pull-right">
-          </i>
+          <i *ngIf="isLogged" class="fa fa-heart-o fa-2x">{{ photo.likes }}</i>
+          <i class="fa fa-comment-o fa-2x">{{ photo.comments }}</i>
+          <i photoOwnerOnly [ownerPhoto]="photo" (click)="remove()" class="fa fa-trash-o fa-2x pull-right"></i>
         </div>
         <hr>
       </small>
@@ -23,7 +20,6 @@
       <ng-template #warnning>
         <p>User has disabled comments for this photo.</p>
       </ng-template>
-
     </div>
   </div>
 </div>
