--- a/src/app/photos/photo-details/photo-details.component.html
+++ b/src/app/photos/photo-details/photo-details.component.html
@@ -7,7 +7,7 @@
       <small>
         <p class="text-left break-word">{{photo.description}}</p>
         <div class="text-left mb-4">
-          <i *ngIf="isLogged" class="fa fa-heart-o fa-2x">{{ photo.likes }}</i>
+          <i *ngIf="isLogged" (click)="like(photo)" class="fa fa-heart-o fa-2x">{{ photo.likes }}</i>
           <i class="fa fa-comment-o fa-2x">{{ photo.comments }}</i>
           <i photoOwnerOnly [ownerPhoto]="photo" (click)="remove()" class="fa fa-trash-o fa-2x pull-right"></i>
         </div>
