--- a/src/app/photos/photo-form/photo-form.component.html
+++ b/src/app/photos/photo-form/photo-form.component.html
@@ -12,7 +12,8 @@
           formControlName="file"
           type="file"
           accept="image/*"
-          (change)="handleFile($any($event).target.files[0])"          >
+          (change)="handleFile($any($event).target.files[0])"
+        >
         <ap-vmessage
           *ngIf="photoForm.get('file')?.errors"
           text="Please, selec a photo!"
@@ -45,11 +46,17 @@
         </label>
       </div>
 
-      <button [disabled]="photoForm.invalid" type="submit" class="btn btn-primary btn-block">
-        Upload
-      </button>
-
-      <a class="btn btn-secondary btn-block">Cancel</a>
+      <div *ngIf="!percentDone; else percent">
+        <button [disabled]="photoForm.invalid" type="submit" class="btn btn-primary btn-block">
+          Upload
+        </button>
+        <a [routerLink]="['']" class="btn btn-secondary btn-block">Cancel</a>
+      </div>
+      <ng-template #percent>
+        <div class="text-center display-4">
+          {{ percentDone }}% Uploading...
+        </div>
+      </ng-template>
     </div>
   </form>
 </div>
