implements progress bar

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -10,6 +10,7 @@
       <a [routerLink]="['']" class="navbar-text px-2"> Please, login! </a>
     </ng-template>
     <div class="fixed-top">
+      <ap-loading></ap-loading>
       <ap-alert></ap-alert>
     </div>
   </nav>
