--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,16 @@
 <header class="fixed-top">
   <nav class="navbar navbar-light bg-white">
-    <a class="navbar-brand px-2">ALURAPIC</a>
+    <a class="navbar-brand px-2">
+      <i tabindex="0" (keyup.space)="menu.toggle()" (click)="menu.toggle()" class="fa fa-bars mr-2" type="button"></i>
+      ALURAPIC
+    </a>
+    <ap-menu #menu>
+      <ul class="list-unstyled">
+        <li>
+          <a showIfLogged [routerLink]="['p','add']">Upload photo</a>
+        </li>
+      </ul>
+    </ap-menu>
     <div *ngIf="(user$ | async) as user; else login">
       <i class="fa fa-user-circle px-2 mr-1"></i>
       <a class="px-2">{{ user.name }}</a>
