--- a/src/app/home/signup/signup.component.html
+++ b/src/app/home/signup/signup.component.html
@@ -1,10 +1,10 @@
 <h4 class="text-center"> Register to embrace a new world!</h4>
 
-<form [formGroup]="signupForm" class="form mt-4" (submit)="signup()">
+<form #form="ngForm" [formGroup]="signupForm" class="form mt-4" (submit)="signup()">
     <div class="form-group">
-      <input #emailInput formControlName="email" class="form-control" placeholder="email" autofocus>
+      <input #emailInput formControlName="email" class="form-control mt-2" placeholder="email" autofocus>
         <ap-vmessage
-          *ngIf="signupForm.get('email')?.errors?.['required']"
+          *ngIf="signupForm.get('email')?.errors?.['required'] && (form.submitted || signupForm.get('email')?.touched)"
           text="Email is required!">
         ></ap-vmessage>
         <ap-vmessage
@@ -14,9 +14,9 @@
     </div>
 
     <div class="form-group">
-        <input formControlName="fullName" placeholder="full name" class="form-control">
+        <input formControlName="fullName" placeholder="full name" class="form-control mt-2">
         <ap-vmessage
-          *ngIf="signupForm.get('fullName')?.errors?.['required']"
+          *ngIf="signupForm.get('fullName')?.errors?.['required'] && (form.submitted || signupForm.get('fullName')?.touched)"
           text="Full name is required!">
         ></ap-vmessage>
         <ap-vmessage
@@ -30,9 +30,9 @@
     </div>
 
     <div class="form-group">
-        <input formControlName="userName" placeholder="user name" class="form-control">
+        <input formControlName="userName" placeholder="user name" class="form-control mt-2">
         <ap-vmessage
-          *ngIf="signupForm.get('userName')?.errors?.['required']"
+          *ngIf="signupForm.get('userName')?.errors?.['required'] && (form.submitted || signupForm.get('userName')?.touched)"
           text="Username is required!">
         ></ap-vmessage>
         <ap-vmessage
@@ -55,9 +55,9 @@
     </div>
 
     <div class="form-group">
-        <input formControlName="password" type="password" placeholder="password" class="form-control">
+        <input formControlName="password" type="password" placeholder="password" class="form-control mt-2">
         <ap-vmessage
-          *ngIf="signupForm.get('password')?.errors?.['required']"
+          *ngIf="signupForm.get('password')?.errors?.['required'] && (form.submitted || signupForm.get('password')?.touched)"
           text="Password is required!!">
         ></ap-vmessage>
         <ap-vmessage
@@ -68,8 +68,12 @@
           *ngIf="signupForm.get('password')?.errors?.['maxlength']"
           text="Maximum length is 14!">
         ></ap-vmessage>
+        <ap-vmessage
+          *ngIf="signupForm.errors?.['userNamePassword'] && form.submitted"
+          text="Username and password must be different">
+        ></ap-vmessage>
     </div>
 
-    <button [disabled]="signupForm.invalid || signupForm.pending" class="btn btn-primary btn-block">Register</button>
-    <p>Already a user? <a [routerLink]="['']">Sign In!</a></p>
+    <button class="btn btn-primary btn-block mt-2">Register</button>
+    <p class="mb-2">Already a user? <a [routerLink]="['']">Sign In!</a></p>
 </form>
